<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    style="@style/ExerciseItemStyle"> <!-- Use the defined style -->

    <TextView
        android:id="@+id/exercise_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/exercise_name_default"
        style="@style/TextStyleBold" />

    <TextView
        android:id="@+id/exercise_details"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/exercise_duration_label"
        style="@style/TextStyle"
        android:layout_marginTop="4dp" />

    <TextView
        android:id="@+id/exercise_calories"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/exercise_calories_label"
        style="@style/TextStyle"
        android:layout_marginTop="4dp" />

    <TextView
        android:id="@+id/exercise_date"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/exercise_date_label"
        style="@style/TextStyle"
        android:layout_marginTop="4dp"
        android:textColor="@color/colorAccent" />

    <Button
        android:id="@+id/deleteButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/delete_button_text"
        android:layout_marginTop="8dp"
        android:backgroundTint="@color/colorError"
        android:textColor="@android:color/white" />
</LinearLayout>
